2010-06-16  6.6.2-2 Cristy  <quetzlzacatenango@image...>
  * Patch for compile problem in mapImages of the STL header.

2010-02-21  6.5.9-10 Cristy  <quetzlzacatenango@image...>
  * Add extent() to extend the image as defined by the geometry, gravity, and
	  image background color.

2009-11-14  6.5.7-8 Cristy  <quetzlzacatenango@image...>
  * Add forwardFourierTransform(), inverseFourierTransform(), and
    inverseFourierTransformImage() methods to implement forward and inverse
    discrete Fourier transform (DFT / IFT).

2009-09-28  6.5.6-6 Cristy  <quetzlzacatenango@image...>
  * Add splice() method to splice the background color into the image.

2009-04-01  6.5.1-1 Cristy  <quetzlzacatenango@image...>
  * Add virtualPixelMethod() method for image and options, required for
    distort().

2008-09-09  6.4.3-7 Cristy  <quetzlzacatenango@image...>
  * Use ImagesToBlob() rather than ImageToBlob() for writeImages().

2007-10-02  6.3.6-7 Cristy  <quetzlzacatenango@image...>
  * Define USE_MAP for Magick++/tests/colorHistogram.cpp (patch provided by
    albert chin <china@thewr...>).

2007-04-10  6.3.3-7 Cristy  <quetzlzacatenango@image...>
  * Add colorspaceType(RGBColorspace) to set RGB colorspace before an
    image read (useful to convert CMYK Potscript to RGB).

2006-02-05  6.3.2-3 Cristy  <quetzlzacatenango@image...>
  * Clear exception in throwException() method.

2006-01-16  6.3.2-0 Cristy  <quetzlzacatenango@image...>
  * Add extent() method to extend the image as defined by the geometry.

2003-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* demo/analyze.cpp (main): New program to demonstrate using the
	'analyze' process module.
	* demo/Makefile.am: Add rules to build analyze program.
	* lib/Image.cpp (process): New method to execute process modules.
	* lib/Image.cpp (attribute): New method to get and set named image
	attributes.

2003-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
