@@ -1,3 +1,6 @@
+2011-02-01  6.6.7-2 Cristy  <quetzlzacatenango@image...>
+  * Remove extra '+' in the geometry operator.
+
 2010-06-16  6.6.2-2 Cristy  <quetzlzacatenango@image...>
   * Patch for compile problem in mapImages of the STL header.
 
